--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -265,6 +265,7 @@
     "re-enter": "Veuillez ré-entrer le prix pour confirmer"
   },
   "footer": {
+    "code_of_ethics": "Code d'éthique",
     "color_key": "Code Couleur",
     "copyright": "© 2018 Decentraland. Tous droits reservés.",
     "mini_copyright": "© 2018 Decentraland.",
