--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -255,6 +255,7 @@
     "re-enter": "확인을 위해 가격을 다시 입력하십시오."
   },
   "footer": {
+    "code_of_ethics": "윤리 강령",
     "color_key": "색상 키",
     "copyright": "© 2018 Decentraland. 판권 소유.",
     "mini_copyright": "© 2018 Decentraland.",
