--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -150,7 +150,7 @@
     "empty_message":
       "購入したい区画を選んでカートに追加します。詳しい参加方法を{video_tutorial_link}動画で観る",
     "find_available_parcel": "購入可能な区画を検索",
-    "gas_price": "ガス価格",
+    "gas_price": "最大ガス価格",
     "land_price": "LAND単価",
     "max_amount_disclaimer":
       "* Kyberに{amount} MANAに換金するために充分な{token} トークンがありません。",
