feat: auction finished text

--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -116,7 +116,7 @@
     "cta": "Ir al mercado",
     "description": "Gracias por participar.",
     "land_sold": "LAND vendido",
-    "mana_burned": "Mana quemada",
+    "mana_burned": "MANA quemada",
     "stats_title": "Aquí hay algunas estadísticas:",
     "title": "Subasta terminada"
   },
