--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -118,7 +118,7 @@
     "cta": "Aller au marché",
     "description": "Merci d'avoir participé.",
     "land_sold": "LAND vendu",
-    "mana_burned": "Mana brûlé",
+    "mana_burned": "MANA brûlé",
     "stats_title": "Voici quelques statistiques:",
     "title": "Enchère terminée"
   },
