--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -115,7 +115,7 @@
     "cta": "마켓 플레이스로 이동",
     "description": "참여해 주셔서 감사합니다.",
     "land_sold": "판매 된 판매량",
-    "mana_burned": "마나 불타",
+    "mana_burned": "MANA 구운",
     "stats_title": "다음은 몇 가지 통계입니다.",
     "title": "경매 완료"
   },
