--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -115,7 +115,7 @@
     "cta": "Go to marketplace",
     "description": "Thank you for participating.",
     "land_sold": "LAND sold",
-    "mana_burned": "Mana burned",
+    "mana_burned": "MANA burned",
     "stats_title": "Here are some stats:",
     "title": "Auction Finished"
   },
