chore: updated hero subtitle

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -337,7 +337,7 @@
   },
   "homepage": {
     "get_started": "Get Started",
-    "hero_subtitle": "Decentralized market for LAND. Zero fees.",
+    "hero_subtitle": "Decentralized market for LAND",
     "hero_title": "Choose your ideal location in Genesis City",
     "newest_lands": "Newest LAND",
     "view_more": "View More",
