--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -339,7 +339,7 @@
   },
   "homepage": {
     "get_started": "Comenzar",
-    "hero_subtitle": "Mercado de LAND de Decentraland. Sin comisiones.",
+    "hero_subtitle": "Mercado de LAND de Decentraland",
     "hero_title": "Elige tu ubicación ideal en Genesis City",
     "newest_lands": "Nuevas LAND",
     "view_more": "Ver Más",
