--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -345,7 +345,7 @@
   },
   "homepage": {
     "get_started": "Commencer",
-    "hero_subtitle": "Marché décentralisé pour LAND. Zéro frais.",
+    "hero_subtitle": "Marché décentralisé pour LAND",
     "hero_title": "Choisissez votre emplacement idéal à Genesis City",
     "newest_lands": "Les plus récents LAND",
     "view_more": "Afficher plus",
