--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -330,7 +330,7 @@
   },
   "homepage": {
     "get_started": "始める",
-    "hero_subtitle": "分散型のLAND取引所　手数料無料",
+    "hero_subtitle": "分散型のLAND取引所",
     "hero_title": "ジェネシスシティで、あなたの理想の土地を選ぼう",
     "newest_lands": "新着LAND",
     "view_more": "もっと見る",
