--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -319,7 +319,7 @@
   },
   "homepage": {
     "get_started": "让我们开始吧",
-    "hero_subtitle": "去中心化虚拟土地市场。免交易费！",
+    "hero_subtitle": "去中心化虚拟土地市场",
     "hero_title": "在\"创世纪城\"中购买您的梦想领地",
     "newest_lands": "最新上架",
     "view_more": "更多",
