--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -334,7 +334,7 @@
   },
   "homepage": {
     "get_started": "시작하기",
-    "hero_subtitle": "랜드를 위한 탈중앙화된 마켓. 수수료 없음.",
+    "hero_subtitle": "랜드를 위한 탈중앙화된 마켓",
     "hero_title": "제네시스 시티에서 가장 이상적인 위치를 선택하시기 바랍니다.",
     "newest_lands": "최신 랜드",
     "view_more": "더 보기",
