--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -486,7 +486,7 @@
       "desktop":
         "Puedes usar la extensión {metamask_link} o una billetera de hardware como {ledger_nano_link}.",
       "mobile":
-        "Puedes usar navegadores móviles como {coinbase_link} o {imtoken_link}."
+        "Puedes usar navegadores móviles como {coinbase_link}, {imtoken_link} o {trust_link}."
     }
   },
   "sign_in_notice": {
