--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -477,7 +477,7 @@
       "desktop":
         "{metamask_link} 확장 또는 {ledger_nano_link}과 같은 하드웨어 지갑을 사용할 수 있습니다.",
       "mobile":
-        "{coinbase_link} 또는 {imtoken_link}과 같은 모바일 브라우저를 사용할 수 있습니다."
+        "{coinbase_link} 또는 {imtoken_link} 또는 {trust_link}과 같은 모바일 브라우저를 사용할 수 있습니다."
     }
   },
   "sign_in_notice": {
