--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -217,7 +217,7 @@
       "You unauthorized the {contract_link} to operate {symbol} on your behalf"
   },
   "bid": {
-    "bid_asset": "bid ERC721",
+    "bid_asset": "ERC721",
     "placed": "bids placed",
     "received": "bids received"
   },
