--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -226,7 +226,7 @@
       "Vous n'avez pas autorisé le {contract_link} à utiliser {symbol} en votre nom"
   },
   "bid": {
-    "bid_asset": "offre ERC721",
+    "bid_asset": "ERC721",
     "placed": "enchères placées",
     "received": "offres reçues"
   },
