--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -199,7 +199,7 @@
     "disapproved": "您未授权 {contract_link} 使用 {symbol}"
   },
   "bid": {
-    "bid_asset": "出价ERC721",
+    "bid_asset": "ERC721",
     "placed": "出价",
     "received": "收到的出价"
   },
