--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -212,7 +212,7 @@
       "{contract_link}に準じて{symbol}を操作することを許可しませんでした"
   },
   "bid": {
-    "bid_asset": "入札ERC721",
+    "bid_asset": "ERC721",
     "placed": "入札単価",
     "received": "入札を受けました"
   },
