--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -29,6 +29,7 @@
     },
     "expiration": "만료",
     "expiration_placeholder": "이 발행물의 만료일",
+    "insufficient_funds": "입찰자가 입찰 비용을 지불하기에 부족합니다.",
     "list_asset": "{asset_name}에 입찰하기",
     "please_authorize":
       "{settings_link}에 가서 입찰을하기 전에 MANA를 사용하도록 입찰 계약서를 승인해야합니다.",
