--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -29,6 +29,7 @@
     },
     "expiration": "Expiration",
     "expiration_placeholder": "Expiration date for this publication",
+    "fingerprint_changed": "Fingerprint changed",
     "insufficient_funds":
       "The bidder has insufficient funds to pay for the bid",
     "list_asset": "Place a bid for the {asset_name}",
