--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -33,6 +33,7 @@
     "insufficient_funds":
       "El ofertante no tiene fondos suficientes para pagar la oferta.",
     "list_asset": "Haz una oferta por el {asset_name}",
+    "not_enough": "No tienes suficiente MANA en tu cuenta",
     "please_authorize":
       "Debe ir a {settings_link} y autorizar el contrato de la Oferta para utilizar MANA en su nombre antes de poder realizar una oferta.",
     "price_placeholder": "Precio en MANA para este {asset_name}.",
