feat: fingerprint changed

--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -29,7 +29,8 @@
     },
     "expiration": "有効期限",
     "expiration_placeholder": "この出版物の有効期限",
-    "fingerprint_changed": "この{asset_name}は修正されました。",
+    "fingerprint_changed":
+      "この{asset_name}は修正されました。入札を更新またはキャンセルしてください。",
     "insufficient_funds": "入札者が入札のために支払うには資金が足りない",
     "list_asset": "{asset_name}に入札する",
     "not_enough": "あなたのアカウントに十分なMANAがありません",
