--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -224,7 +224,6 @@
       "Usted no ha autorizado el {contract_link} para operar {symbol} en su nombre"
   },
   "bid": {
-    "bid_asset": "ERC721",
     "placed": "ofertas puestas",
     "received": "ofertas recibidas"
   },
@@ -291,8 +290,10 @@
     "tx_to_be_send": "Enviarás una transacción a {action} parcels: {parcels}"
   },
   "fatfinger_modal": {
-    "description": "Vas a publicar el {asset_name} por {price}",
+    "bid_type": "oferta",
+    "description": "Vas a {listing_type} el {asset_name} por {price}",
     "error": "Los precios no coinciden",
+    "publication_type": "lista",
     "re-enter": "Por favor, vuelva a introducir el precio para confirmar"
   },
   "footer": {
