--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -229,7 +229,6 @@
       "Vous n'avez pas autorisé le {contract_link} à utiliser {symbol} en votre nom"
   },
   "bid": {
-    "bid_asset": "ERC721",
     "placed": "enchères placées",
     "received": "offres reçues"
   },
@@ -299,8 +298,10 @@
       "Vous allez envoyer une transaction pour {action} les parcelles: {parcels}"
   },
   "fatfinger_modal": {
-    "description": "Vous allez publier le {asset_name} pour {price}",
+    "bid_type": "offre",
+    "description": "Vous allez {listing_type} le {asset_name} pour {price}",
     "error": "Les prix ne correspondent pas",
+    "publication_type": "liste",
     "re-enter": "Veuillez ré-entrer le prix pour confirmer"
   },
   "footer": {
