--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -258,7 +258,8 @@
     "subtitle": "设置名称和说明，及连块土地的相关地块。"
   },
   "estate_select": {
-    "bids_warning": "这个连块土地有人出价，如果增加或移除土地，则所有的出价将无效。",
+    "bids_warning":
+      "这个连块土地有人出价，如果增加或移除土地，则所有的出价将无效。",
     "description": "选择彼此相邻的地块",
     "detail": "连块土地细节",
     "edit_selection": "在地图上选择地块",
