Feat: archive bids (#885)
<img width="942" alt="Screen Shot 2019-03-26 at 13 22 23" src="https://user-images.githubusercontent.com/7549152/55014727-402a1a80-4fca-11e9-81a3-13ea2716d42e.png">
<img width="948" alt="Screen Shot 2019-03-26 at 13 22 14" src="https://user-images.githubusercontent.com/7549152/55014728-402a1a80-4fca-11e9-8c6a-7eaba60cb164.png">

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -223,7 +223,9 @@
   },
   "bid": {
     "placed": "bids placed",
-    "received": "bids received"
+    "received": "bids received",
+    "see_all": "See All",
+    "see_archived": "See Archives"
   },
   "buy_mana": {
     "action": "Buy More",
@@ -310,6 +312,8 @@
     "activity": "Activity",
     "add": "add",
     "address_placeholder": "0x...",
+    "archive": "Archive",
+    "archive_bids": "archived bids",
     "atlas": "Atlas",
     "auction": "Auction",
     "balance": "Balance",
@@ -375,6 +379,7 @@
     "transfer_irreversible":
       "Remember that transferring is an irreversible operation.",
     "type": "Type",
+    "unarchive": "Unarchive",
     "unauthorized": "Unauthorized",
     "undo": "Undo",
     "update": "Update",
